# QT_labs

Converter/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
ConverterSignal/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
Helpdesk/: CMakeLists.txt  csvticketrepository.cpp  csvticketrepository.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ticket.h  ticketdialog.cpp  ticketdialog.h  ticketdialog.ui  ticketfilterproxymodel.cpp  ticketfilterproxymodel.h  tickettablemodel.cpp  tickettablemodel.h
PasswordManager/: CMakeLists.txt  accountentry.h  accountentrymodel.cpp  accountentrymodel.h  accountentrytable.h  databasemanager.cpp  databasemanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  passwordfilterproxymodel.cpp  passwordfilterproxymodel.h  passwordleakchecker.cpp  passwordleakchecker.h  passwordrecord.h  passwordtablemodel.cpp  passwordtablemodel.h  repository.cpp  repository.h
QuickPad/: mainwindow.cpp  mainwindow.h  mainwindow.ui
ScoreBoard/: .gitignore  CMakeLists.txt  main.cpp  widget.cpp  widget.h  widget.ui
TypingTrainer/: mainwindow.ui
TypingTrainer1/: mainwindow.ui
TypingTrainer1/.qtcreator/: CMakeLists.txt.user.c4b6024
TypingTrainer2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  typingmodel.cpp  typingmodel.h
